<resources xmlns:tools="http://schemas.android.com/tools">
    //Titles of pages
    <string name="image_description">image</string>
    <string name="app_name"><u>The Captain\'s Catch</u></string>
    <string name="book_table"><u>Book a table</u></string>
    <string name="available_tables"><u>Available tables</u></string>
    <string name="manage_booking"><u>Manage my bookings</u></string>
    <string name="reviews"><u>Leave a review!</u></string>
    <string name="settings"><u>Settings</u></string>
    <string name="login"><u>Login</u></string>
    <string name="register"><u>Register</u></string>
    <string name="edit_booking"><u>Edit booking</u></string>
    <string name="previous_bookings"><u>Previous Bookings</u></string>

    //Button names
    <string name="book_now_btn">Book now</string>
    <string name="sign_out_btn">Sign out</string>
    <string name="back_bookings_btn">Back to bookings</string>
    <string name="amend_booking_btn">Amend booking</string>
    <string name="manage_booking_btn">Manage bookings</string>
    <string name="back_manage_bookings_btn">Back to manage bookings</string>
    <string name="check_available_btn">Check Table Availability</string>
    <string name="cancel_booking_btn">Cancel booking</string>
    <string name="view_available_btn">Click to see if the table is available!</string>
    <string name="edit_booking_btn">Edit booking</string>
    <string name="login_btn">Login</string>
    <string name="available_tables_btn">Available tables</string>
    <string name="book_table_btn">Book a table</string>
    <string name="reviews_btn">Reviews</string>
    <string name="settings_btn">Settings</string>
    <string name="previous_bookings_btn">Previous Bookings</string>

    //Available tables
    <string name="table2">Table2</string>
    <string name="table3">Table3</string>
    <string name="table4">Table4</string>
    <string name="table5">Table5</string>
    <string name="table6">Table6</string>
    <string name="table7">Table7</string>
    <string name="table8">Table8</string>
    <string name="table9">Table9</string>
    <string name="table10">Table10</string>
    <string name="table11">Table11</string>
    <string name="table12">Table12</string>
    <string name="table13">Table13</string>
    <string name="table14">Table14</string>
    <string name="table15">Table15</string>
    <string name="table16">Table16</string>

    //Successful booking pages
    <string name="success">Your booking has been successfully made</string>
    <string name="amend_success">Your booking has been successfully changed. You can see the changes in the manage my bookings page</string>
    <string name="unsuccessful">Your booking has been unsuccessful please try again.</string>

    //Text
    <string name="notifications">Notifications</string>
    <string name="available">Available</string>
    <string name="unavailable">Unavailable</string>
    <string name="outside">Outside</string>
    <string name="inside">Inside</string>

    //Login and register pages:
    <string name="name">First and last name</string>
    <string name="phone_number">Phone number</string>

    //Previous bookings:
    <string name="text_box1_date">Date: 30 November 2023</string>
    <string name="text_box2_date">Date: 15 November 2023</string>
    <string name="text_box3_date">Date: 24 October 2023</string>

    <string name="text_box1_table_size">Table size: 2</string>
    <string name="text_box2_table_size">Table size: 8</string>
    <string name="text_box3_table_size">Table size: 5</string>

    <string name="text_box1_location">Location: Inside</string>
    <string name="text_box2_location">Location: Outside</string>
    <string name="text_box3_location">Location: Inside</string>

    <string name="text_box1_meal_time">Meal time: Dinner</string>
    <string name="text_box2_meal_time">Meal time: Breakfast</string>
    <string name="text_box3_meal_time">Meal time: Lunch</string>

    //Reviews
    <string name="review_rating">Rating:</string>
    <string name="type_review">Type your review here!</string>
    <string name="post_review">Submit review</string>

    //For dropdown menus

    <string name="select_date">Select date</string>

    <string-array name="date">
        <item>Select date</item>
        <item tools:ignore="TypographyDashes">2023-12-16</item>
        <item tools:ignore="TypographyDashes">2023-12-17</item>
        <item tools:ignore="TypographyDashes">2023-12-18</item>
    </string-array>

    <string-array name="mealtime">
        <item>Select mealtime</item>
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>

    <string-array name="location">
        <item>Select location</item>
        <item>Inside</item>
        <item>Outside - Seaside</item>
        <item>Outside - Garden side</item>
    </string-array>

    <string-array name="table_size">
        <item>Select table size</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>