<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AvailableTablesView">

    <ImageView
        android:id="@+id/anchor_logo"
        android:layout_width="74dp"
        android:layout_height="92dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/image_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/anchor" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anchor_logo" />

    <TextView
        android:id="@+id/inside"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/inside"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/available" />

    <TextView
        android:id="@+id/outside"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/outside"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/Dark_grey"
        android:text="@string/table2"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inside" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/green"
        android:text="@string/table3"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/inside" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/Dark_grey"
        android:text="@string/table4"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/inside" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/Dark_grey"
        android:text="@string/table6"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/Dark_grey"
        android:text="@string/table7"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/green"
        android:text="@string/table5"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/Dark_grey"
        android:text="@string/table8"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/green"
        android:text="@string/table9"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/outside_button1"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/Dark_grey"
        android:text="@string/table10"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/outside_button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outside" />

    <Button
        android:id="@+id/outside_button2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/Dark_grey"
        android:text="@string/table11"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/outside_button3"
        app:layout_constraintStart_toEndOf="@+id/outside_button1"
        app:layout_constraintTop_toBottomOf="@+id/outside" />

    <Button
        android:id="@+id/outside_button3"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/green"
        android:text="@string/table12"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/outside_button2"
        app:layout_constraintTop_toBottomOf="@+id/outside" />

    <Button
        android:id="@+id/outside_button4"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/green"
        android:text="@string/table14"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/outside_button5"
        app:layout_constraintStart_toEndOf="@+id/outside_button6"
        app:layout_constraintTop_toBottomOf="@+id/outside_button2" />

    <Button
        android:id="@+id/outside_button5"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/green"
        android:text="@string/table15"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/outside_button4"
        app:layout_constraintTop_toBottomOf="@+id/outside_button3" />

    <Button
        android:id="@+id/outside_button6"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/Dark_grey"
        android:text="@string/table13"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/outside_button4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outside_button1" />

    <Button
        android:id="@+id/outside_button7"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/green"
        android:text="@string/table16"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outside_button4" />

    <Button
        android:id="@+id/available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/green"
        android:text="@string/available"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/unavailable"
        app:layout_constraintTop_toBottomOf="@+id/app_name" />

    <Button
        android:id="@+id/unavailable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/Dark_grey"
        android:text="@string/unavailable"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/available"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:background="@color/dark_blue"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/home_icon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintBounds" />

    <ImageButton
        android:id="@+id/home_icon"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:background="@null"
        android:contentDescription="@string/image_description"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toStartOf="@+id/calendar_icon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@drawable/home" />

    <ImageButton
        android:id="@+id/calendar_icon"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:background="@null"
        android:contentDescription="@string/image_description"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toStartOf="@+id/reviews_icon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/home_icon"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@drawable/calendar" />

    <ImageButton
        android:id="@+id/reviews_icon"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:background="@null"
        android:contentDescription="@string/image_description"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toStartOf="@+id/account_icon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/calendar_icon"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@drawable/reviews" />

    <ImageButton
        android:id="@+id/account_icon"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:background="@null"
        android:contentDescription="@string/image_description"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/reviews_icon"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@drawable/profile" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back_to_bookings"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/ic_button"
        android:text="@string/back_bookings_btn"
        android:textColor="@color/button_text"
        app:layout_constraintBottom_toTopOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>