<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <ImageView
        android:id="@+id/anchor_logo"
        android:layout_width="74dp"
        android:layout_height="92dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/image_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/anchor" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anchor_logo" />

    <TextView
        android:id="@+id/manage_booking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/manage_booking"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name" />

    <!--First text box -->
    <TextView
        android:id="@+id/booking1"
        android:layout_width="320dp"
        android:layout_height="112dp"
        android:layout_marginTop="20dp"
        android:background="@color/white_text_box_background"
        android:text="@string/text_box1_date"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manage_booking" />

    <TextView
        android:id="@+id/textBox1_tableSize"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_marginTop="30dp"
        android:background="@null"
        android:text="@string/text_box1_table_size"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/textBox1_location"
        app:layout_constraintStart_toStartOf="@+id/booking1"
        app:layout_constraintTop_toTopOf="@+id/booking1" />

    <TextView
        android:id="@+id/textBox1_location"
        android:layout_width="120dp"
        android:layout_height="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:background="@null"
        android:text="@string/text_box1_location"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/textBox1_mealTime"
        app:layout_constraintStart_toEndOf="@+id/textBox1_tableSize"
        app:layout_constraintTop_toTopOf="@+id/booking1" />

    <TextView
        android:id="@+id/textBox1_mealTime"
        android:layout_width="120dp"
        android:layout_height="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:background="@null"
        android:text="@string/text_box1_meal_time"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/booking1"
        app:layout_constraintStart_toEndOf="@+id/textBox1_location"
        app:layout_constraintTop_toTopOf="@+id/booking1" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/edit_booking"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/ic_button"
        android:text="@string/edit_booking_btn"
        android:textColor="@color/button_text"
        app:layout_constraintBottom_toBottomOf="@+id/booking1"
        app:layout_constraintStart_toStartOf="@+id/booking1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_booking"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/ic_button"
        android:text="@string/cancel_booking_btn"
        android:textColor="@color/button_text"
        app:layout_constraintBottom_toBottomOf="@+id/booking1"
        app:layout_constraintEnd_toEndOf="@+id/booking1" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/previous_bookings"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/ic_button"
        android:text="@string/previous_bookings_btn"
        android:textColor="@color/button_text"
        app:layout_constraintBottom_toTopOf="@+id/back_to_bookings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back_to_bookings"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/ic_button"
        android:text="@string/back_bookings_btn"
        android:textColor="@color/button_text"
        app:layout_constraintBottom_toTopOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:background="@color/dark_blue"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/home_icon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintBounds" />

    <ImageButton
        android:id="@+id/home_icon"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:background="@null"
        android:contentDescription="@string/image_description"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toStartOf="@+id/calendar_icon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@drawable/home" />

    <ImageButton
        android:id="@+id/calendar_icon"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:background="@null"
        android:contentDescription="@string/image_description"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toStartOf="@+id/reviews_icon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/home_icon"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@drawable/calendar" />

    <ImageButton
        android:id="@+id/reviews_icon"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:background="@null"
        android:contentDescription="@string/image_description"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toStartOf="@+id/account_icon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/calendar_icon"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@drawable/reviews" />

    <ImageButton
        android:id="@+id/account_icon"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:background="@null"
        android:contentDescription="@string/image_description"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/reviews_icon"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@drawable/profile" />
</androidx.constraintlayout.widget.ConstraintLayout>
