<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditBooking">

    <ImageView
        android:id="@+id/anchor_logo"
        android:layout_width="74dp"
        android:layout_height="92dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/image_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/anchor" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anchor_logo" />

    <TextView
        android:id="@+id/booking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/amend_booking"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/amend_booking_btn"
        android:layout_width="131dp"
        android:layout_height="48dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/standard_button"
        android:text="@string/amend_booking_btn"
        android:textColor="@color/white"
        android:backgroundTint="@color/green"
        app:layout_constraintBottom_toTopOf="@+id/manage_bookings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/manage_bookings"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/standard_button"
        android:text="@string/manage_booking_btn"
        android:textColor="@color/button_text"
        app:layout_constraintBottom_toTopOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="413dp"
        android:layout_height="78dp"
        android:background="@color/dark_blue"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintBounds" />

    <ImageView
        android:id="@+id/home_icon"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/image_description"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@drawable/home" />

    <ImageView
        android:id="@+id/calendar_icon"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_marginStart="15dp"
        android:contentDescription="@string/image_description"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toEndOf="@+id/home_icon"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@drawable/calendar" />

    <ImageView
        android:id="@+id/reviews_icon"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_marginStart="15dp"
        android:contentDescription="@string/image_description"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toEndOf="@+id/calendar_icon"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@drawable/reviews" />

    <ImageView
        android:id="@+id/account_icon"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_marginStart="15dp"
        android:contentDescription="@string/image_description"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toEndOf="@+id/reviews_icon"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@drawable/profile" />

</androidx.constraintlayout.widget.ConstraintLayout>